  - added traceback to Device.get_device_instance method
  - updated Keithley DMM2000 device in visa.devices

0.7.0rc10
  - updated docs
  - fixed no data download in pyscada.js
  - fixed default polling interval in pyscada.device

0.7.0rc11
  - changed widget model to support content from plugins
  - changed visable to visible in pyscada.hmi.models.Chart, SlidingPanelMenu, Widget
  - some changes for python 3 compatibility in pyscada.export

0.7.0rc12
  - fixed issue #13, Mismatch between event limit elif cases and the displayed limit types.
  - merged pull request #12, changing from source_format to target_format to match preceding setting of '2H' value

0.7.0rc13
  - updated docs, switching from python 2.7 to python 3
  - added redirect to https to the nginx sample config
  - fixed server error for BackgroundProcess View in Admin with python3
  - fixed HDF5 export for python 3
  - fixed ProcessFlowDiagram in HMI
  - added support for multiple SlidingSidePanels on one Side
  - added date_saved field to the RecordedData Model, renamed the RecordedData model without the field to RecordedDataOld,
    migration #48 will copy some data to the new model, the rest can be copied by using the move_data.py script

0.7.0rc14
  - update to flot 2.1.6
  - fixed process flow diagram value not displayed
  - moved x y zoom selection in HMI to each Chart
  - add option of redirecting to a custom login page
  - add framer option for modbus communication
  - add data courser in chart
  - add XYChart
  - add new form widget in HMI
  - add new drop down control element in HMI
  - fixed WidgetContent not being deleted
  - moved signal related methods to dedicated signals.py
  - added pyserial to dependency list
  - improved hmi <--> db communication to avoid data loss on slow connections

0.7.0rc15
  - fixed zombi process problem
  - fixed migrations with python3
  - changed datetime_now to now from django timezone

0.7.0rc16
  - fixed re-login after logout (#22)