@@ -31,7 +31,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a  class="navbar-brand" target="_blank" href="{% url 'view-overview'%}">PyScada</a>
+                        <a  class="navbar-brand" target="{{ link_target }}" href="{% url 'view-overview'%}">PyScada</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
@@ -47,7 +47,7 @@
                                     <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">{{ user.email }}</a></li>
                                     <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">change user info</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="/accounts/password_change" target="_blank"> change password</a></li>
+                                    <li><a href="/accounts/password_change" target="{{ link_target }}"> change password</a></li>
                                     <li class="divider"></li>
                                     <li><a href="/accounts/logout"> logout</a></li>
                                 </ul>
