@@ -112,7 +112,7 @@
 								<li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">{{ user.email }}</a></li>
 								<li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">change user info</a></li>
 								<li class="divider"></li>
-								<li><a href="/accounts/password_change" target="_blank"> change password</a></li>
+								<li><a href="/accounts/password_change" target="{{ link_target }}"> change password</a></li>
 								<li class="divider"></li>
 								<li><a href="/accounts/logout"> logout</a></li>
                             </ul>
