@@ -8,13 +8,13 @@
         <div class="col-sm-3">
         <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><a href="{% url 'main-view' view.link_title %}" target="_blank" >{{ view.title }}</a></h3>
+                    <h3 class="panel-title"><a href="{% url 'main-view' view.link_title %}" target="{{ link_target }}" >{{ view.title }}</a></h3>
                 </div>
                 <div class="panel-body">
                 {% if view.logo %}
-                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><img src="{{ view.logo.url }}" alt="{{ view.description }}"  width="100%" ></a>
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="{{ link_target }}" ><img src="{{ view.logo.url }}" alt="{{ view.description }}"  width="100%" ></a>
                 {% else %}
-                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><p style="min-height: 120px;">{{ view.description }}</p></a>
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="{{ link_target }}" ><p style="min-height: 120px;">{{ view.description }}</p></a>
                 {% endif %}
             </div>
            </div>
@@ -28,10 +28,10 @@
         <div class="col-sm-3">
         <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><a href="{% url 'pyscada_admin:index' %}" target="_blank">Admin</a></h3>
+                    <h3 class="panel-title"><a href="{% url 'pyscada_admin:index' %}" target="{{ link_target }}">Admin</a></h3>
                 </div>
                 <div class="panel-body">
-                <a href="{% url 'pyscada_admin:index' %}" class="thumbnail" target="_blank"><img src="{% static "pyscada/img/admin_logo.jpg" %}" alt="The Admin Panel"  width="100%"></a>
+                <a href="{% url 'pyscada_admin:index' %}" class="thumbnail" target="{{ link_target }}"><img src="{% static "pyscada/img/admin_logo.jpg" %}" alt="The Admin Panel"  width="100%"></a>
             </div>
            </div>
         </div>
